<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/back">


    <Button
        android:id="@+id/button"
        android:layout_width="225dp"
        android:layout_height="82dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="502dp"
        android:background="@drawable/bg_button"
        android:text="@string/fahrenheit_celsius"
        android:textAlignment="center"
        android:textColor="@color/white"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="225dp"
        android:layout_height="82dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="336dp"
        android:background="@drawable/bg_button"
        android:text="@string/celsius_kelvin"
        android:textAlignment="center"
        android:textColor="@color/white"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button3"
        android:layout_width="225dp"
        android:layout_height="82dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="169dp"
        android:background="@drawable/bg_button"
        android:text="@string/fahrenheit_kelvin"
        android:textAlignment="center"
        android:textColor="@color/white"

        tools:ignore="VisualLintButtonSize" />
</RelativeLayout>